[Glitch] Ensure carousel slides don't overflow
Port e9f197740d831b0685ed53bcf3e4dc05b86a74b5 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -11373,6 +11373,8 @@ noscript {
   &__slide {
     flex: 0 0 auto;
     flex-basis: 100%;
+    width: 100%;
+    overflow: hidden;
   }
 
   .status {
